Fix dashboard spacing

--- a/CGIAR-QA-front/src/app/_shared/timeline/timeline.component.scss
+++ b/CGIAR-QA-front/src/app/_shared/timeline/timeline.component.scss
@@ -15,6 +15,7 @@
     justify-content: space-between;
     align-items: center;
     background-color: whitesmoke;
+    border-radius: 5px 5px 0 0;
     h1, h3 {
         font-family: 'Poppins';
     }
@@ -85,6 +86,7 @@ footer{
     height: 40px;
     display: flex;
     align-items: center;
+    padding: 0 1em;
     .next-batch{
         width: auto;
         display: flex;
