--- a/CGIAR-QA-front/src/app/dashboard/assesor-dashboard/assessor-dashboard.component.scss
+++ b/CGIAR-QA-front/src/app/dashboard/assesor-dashboard/assessor-dashboard.component.scss
@@ -4,6 +4,7 @@
 
   .icons-header{
     padding: 0;
+    margin-bottom: 1em;
     .model-link-container {
       padding: 10px;
       cursor: pointer;
@@ -332,6 +333,39 @@
       }
     }
   }
+}
+
+.css-button-3d--sand {
+  min-width: 130px;
+  // height: 40px;
+  color: var(--black);
+  padding: 5px 10px;
+  font-weight: $semibold;
+  cursor: pointer;
+  transition: all 0.3s ease;
+  position: relative;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 0.5em;
+  outline: none;
+  border-radius: 5px;
+  border: none;
+  background: #ced4da;
+  box-shadow: 0 5px #adb5bd;
+  font-size: $font-sm;
+  margin-left: 1em;
+  .icon {
+    font-size: $font-md;
+  }
+}
+.css-button-3d--sand:hover {
+  box-shadow: 0 3px #adb5bd;
+  top: 1px;
+}
+.css-button-3d--sand:active {
+  box-shadow: 0 0 #adb5bd;
+  top: 5px;
 }
 
 // .asesor-dashboard {
